<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jusecase</groupId>
    <artifactId>poe-stash-buddy</artifactId>
    <version>0.2.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>9</maven.compiler.source>
        <maven.compiler.target>9</maven.compiler.target>
        <junit.jupiter.version>5.0.0</junit.jupiter.version>
        <junit.platform.version>1.0.0</junit.platform.version>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>repo.spring.io</id>
            <name>SpringSource milestones</name>
            <url>http://repo.spring.io/milestone</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>

        <dependency>
            <groupId>org.jusecase</groupId>
            <artifactId>jusecase</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.jusecase</groupId>
            <artifactId>jusecase</artifactId>
            <version>1.0.0</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jusecase</groupId>
            <artifactId>inject</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.jusecase</groupId>
            <artifactId>inject</artifactId>
            <version>0.1.0</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.1stleg</groupId>
            <artifactId>jnativehook</artifactId>
            <version>2.1.0</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.8.6</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.jusecase</groupId>
            <artifactId>builders</artifactId>
            <version>0.2.0</version>
        </dependency>

    </dependencies>


    <build>
        <finalName>poe-stash-buddy</finalName>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-modules=java.xml.ws.annotation</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Custom builders generator -->
            <plugin>
                <groupId>org.jusecase</groupId>
                <artifactId>builders-generator</artifactId>
                <version>0.3.3</version>
                <configuration>
                    <targetDirectory>src/test/generated-builders</targetDirectory>
                    <packages>
                        <param>org.jusecase.poe.entities</param>
                    </packages>
                </configuration>
            </plugin>

            <!-- Add generated test source directories -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.12</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/test/generated-builders</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- AspectJ -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>1.10</version>
                <configuration>
                    <complianceLevel>9</complianceLevel>
                    <source>9</source>
                    <target>9</target>
                    <showWeaveInfo>true</showWeaveInfo>
                    <verbose>true</verbose>
                    <Xlint>ignore</Xlint>
                    <encoding>UTF-8 </encoding>
                    <aspectLibraries>
                        <aspectLibrary>
                            <groupId>org.jusecase</groupId>
                            <artifactId>inject</artifactId>
                        </aspectLibrary>
                    </aspectLibraries>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <!-- use this goal to weave all your main classes -->
                            <goal>compile</goal>
                            <!-- use this goal to weave all your test classes -->
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjtools</artifactId>
                        <version>1.9.0.RC2</version>
                    </dependency>
                    <dependency>
                        <groupId>com.sun</groupId>
                        <artifactId>tools</artifactId>
                        <version>9</version>
                        <scope>system</scope>
                        <systemPath>${basedir}/lib/tools.jar</systemPath>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- Test -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19</version>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.platform</groupId>
                        <artifactId>junit-platform-surefire-provider</artifactId>
                        <version>${junit.platform.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>${junit.jupiter.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- Code coverage -->
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.1.0</version>
                <dependencies>
                    <dependency>
                        <groupId>javax.xml.bind</groupId>
                        <artifactId>jaxb-api</artifactId>
                        <version>2.2.3</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.9</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <excludes>
                        <exclude>layout/**</exclude>
                        <exclude>org/jusecase/poe/ui/**</exclude>
                        <exclude>org/jusecase/poe/plugins/NativeHookPlugin.class</exclude>
                        <exclude>org/jusecase/poe/plugins/RobotImageCapturePlugin.class</exclude>
                        <exclude>org/jusecase/poe/StashBuddy**</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>1.7.21</version>
                <executions>
                    <execution>
                        <id>l4j-clui</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <outfile>target/poe-stash-buddy.exe</outfile>
                            <jar>target/poe-stash-buddy-jar-with-dependencies.jar</jar>
                            <classPath>
                                <mainClass>org.jusecase.poe.StashBuddy</mainClass>
                                <addDependencies>true</addDependencies>
                                <preCp>anything</preCp>
                            </classPath>
                            <icon>icon.ico</icon>
                            <jre>
                                <path>.</path>
                            </jre>
                            <cmdLine>-Dsun.java2d.dpiaware=false</cmdLine>
                            <versionInfo>
                                <fileVersion>1.0.0.0</fileVersion>
                                <txtFileVersion>${project.version}</txtFileVersion>
                                <fileDescription>${project.name}</fileDescription>
                                <copyright>Apache 2.0</copyright>
                                <productVersion>1.0.0.0</productVersion>
                                <txtProductVersion>${project.version}</txtProductVersion>
                                <productName>${project.name}</productName>
                                <originalFilename>poe-stash-buddy.exe</originalFilename>
                                <internalName>poe-stash-buddy</internalName>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>org.jusecase.poe.StashBuddy</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>assembly</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>attached</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>
